internal/controller/testdata/postgres/cnpg-basic/contains/iam-wi-policy.yaml
---
action: create
matcher: Subset
object:
  apiVersion: iam.cnrm.cloud.google.com/v1beta1
  kind: IAMPolicyMember
  metadata:
    name: cnpg-wi-user-test-db-672f8f1a
    namespace: my-team
  spec:
    role: roles/iam.workloadIdentityUser
    member: serviceAccount:test-gcp-project.svc.id.goog[my-team/test-db]
    resourceRef:
      kind: IAMServiceAccount
      name: cnpg-test-db-020a67ba
